# verlet-playground

./: .c4droid  .gitmodules  CMakeLists.txt
src/: Ball.cpp  Ball.h  Finger.cpp  Finger.h  Game.cpp  Game.h  GameParam.h  Grid.cpp  Grid.h  MainActivity.cpp  MainActivity.h  Renderer.cpp  Renderer.h  Solver.cpp  Solver.h  main.cpp  shader.h  vec.cpp  vec.h
src/physic/: Ball.cpp  Grid.h  Solver.h
src/render/: Renderer.cpp
src/render/shader/: base.frag
src/shader/: base.frag  base.vert
